--- a/tycoon-poc-text/index.html
+++ b/tycoon-poc-text/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Mow Grass Mo' Money - Tycoon Text POC</title>
+  <link rel="icon" href="data:,">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
