--- a/mowing-poc-game/index.html
+++ b/mowing-poc-game/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Mow Grass Mo' Money - POC Mowing</title>
+  <title>MoGrassMoMoney - POC Mowing</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <main class="shell">
-    <h1>Mow Grass Mo' Money - Mowing POC</h1>
+    <h1>MoGrassMoMoney - Mowing POC</h1>
     <canvas id="game" width="960" height="640" aria-label="Mowing game canvas"></canvas>
     <p class="hint">Hold left mouse to drive. Move cursor left/right to steer. Hold right mouse to reverse. Press F for fullscreen.</p>
   </main>
