--- a/tycoon-poc-text/index.html
+++ b/tycoon-poc-text/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Mow Grass Mo' Money - Tycoon Text POC</title>
+  <title>MoGrassMoMoney - Tycoon Text POC</title>
   <link rel="icon" href="data:,">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <main class="shell">
-    <h1>Mow Grass Mo' Money - Tycoon Text POC</h1>
+    <h1>MoGrassMoMoney - Tycoon Text POC</h1>
     <section class="workspace" aria-label="Game workspace">
       <pre id="console" aria-live="polite"></pre>
       <div class="right-column">
