Adjust fuel drain and resume flow

--- a/mowing-poc-game/index.html
+++ b/mowing-poc-game/index.html
@@ -11,7 +11,7 @@
   <main class="shell">
     <h1>MoGrassMoMoney - Mowing POC</h1>
     <canvas id="game" width="960" height="640" aria-label="Mowing game canvas"></canvas>
-    <p class="hint">Click and drag to draw a route. Accept or Retry, then hold Space to fast-forward playback. Press F for fullscreen and R to reset.</p>
+    <p class="hint">Click and drag to draw a route. Accept or Retry, hold Space to fast-forward, and press E to refill fuel when needed. Press F for fullscreen and R to reset.</p>
   </main>
   <script src="game.js"></script>
 </body>
