Add start menu with mower and lawn

--- a/mowing-poc-game/index.html
+++ b/mowing-poc-game/index.html
@@ -11,8 +11,9 @@
   <main class="shell">
     <h1>MoGrassMoMoney - Mowing POC</h1>
     <canvas id="game" width="960" height="640" aria-label="Mowing game canvas"></canvas>
-    <p class="hint">Click and drag to draw a route. Accept or Retry, hold Space to fast-forward, and press E to refill fuel when needed. Press F for fullscreen and R to reset.</p>
+    <p class="hint">Use the setup menu to pick mower + lawn, then draw routes and Accept/Retry. Hold Space to fast-forward animation, press E to refill, F for fullscreen, and R to return to setup.</p>
   </main>
+  <script src="maps.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
